--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -36,3 +36,25 @@ h2 {position: absolute;
   text-transform: uppercase;
   color: #FFFFFF;
 }
+h4 {
+  position: absolute;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 34px;
+  color: #FFFFFF;
+}
+h4+p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: white;
+}
+h4+p+p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  color: white;
+}
