--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -58,3 +58,10 @@ h4+p+p {
   line-height: 21px;
   color: white;
 }
+h4+p+p+p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: white;
+}
