--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -11,6 +11,7 @@ p {
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
+  left: 152px;
 }
 h1 {
   position: absolute;
@@ -52,6 +53,7 @@ h4+p {
   color: white;
 }
 h4+p+p {
+  top: 60px;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
